turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:3: error: Invalid literal number
for (j<-1to 9) {
        ^Source:2: error: Missing closing brace `}' assumed here
override def run() {
^Source:2: error: expected start of definition
override def run() {
         ^