turtleart.lessons.turtleart.Main.DiskTwo.scala.code
override def run() {
for (j<-1to 9) {
setCouleur(Color.black)
for (k<-1 to 20) {
avance(100)
recule(100)
droite(1)
setCouleur(Color.red)
for (k<-1 to 20) {
avance(100)
recule(100)
droite(1)
}
}
}
